--- a/Web_Fund_Dec2021/FlagWebPage/style.css
+++ b/Web_Fund_Dec2021/FlagWebPage/style.css
@@ -1,13 +1,15 @@
-#flag{
+.flag{
     background-color: white;
     width: 600px;
     height: 400px;
     text-align: center;
+    display: inline-block;
+    margin-right: 50px;
 }
 .strips{
     width: 32%;
     height: 100%;
-    display: inline-flex;
+    display: inline-block;
     border: 1px solid black;
     margin-left: -4px;
 }
